resources/tests/invalid_syntax/fn_return.ct
//Error: Function '.*' of return type 'void' cannot return a value!
//2
fn hello()->void: return 10; // <-error

fn hi()->i64: return; // <-error